<resources>
    <string name="app_name">Memorabilia</string>
    <string name="welcome">Welcome to Memorabilia\!</string>
    <string name="button_Currently_Reading">Currently Reading</string>
    <string name="button_MyBooks">MyBooks</string>
    <string name="button_Want_To_Read">Want To Read</string>
    <string name="button_Finished_Reading">Finished Reading</string>
    <string name="recommended_for_you">Recommended for You</string>
    <string name="welcome_text">Welcome to Memorabilia</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_register">Let\'s get started!</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_login">Login to Memorabilia</string>
    <string name="message_login">Please log in to continue your reading journey.</string>
    <string name="Currently_reading">List of books, you’re currently reading!</string>
    <string name="Currently_reading_title">Currently Reading</string>
    <string name="Finished_reading_title">Finished Reading</string>
    <string name="Finished_reading">Yay! Here are your finished books\!</string>
    <string name="Want_to_read_title">Want To Read</string>
    <string name="Want_to_read">List of books, you are curious about\!</string>
    <string name="title_rv">Title</string>
    <string name="author_rv">Author</string>
    <string name="profile_title">Profile</string>
    <string name="name_profile">Name</string>
    <string name="theme_profile">Theme</string>
    <string name="changetheme">Change Theme</string>
    <string name="about">Information</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="setting_title">Settings</string>
    <string name="app_guide">App Guide</string>
    <string name="app_logo">App Logo</string>
    <string name="overview_of_the_app">Overview of the App</string>
    <string name="overview_content">Memorabilia is a book tracking and recommendation app designed to help you manage your reading journey. You can search for books, track what you\'re currently reading, what you want to read, and keep a record of books you\'ve finished reading.</string>
    <string name="search_feature">Search Feature</string>
    <string name="search_feature_content">The Search feature allows you to find books. Simply enter your query in the search bar and browse through the results. You can view detailed information about each book and add them to your reading lists.</string>
    <string name="currently_reading_feature">Currently Reading Feature</string>
    <string name="currently_reading_feature_content">The Currently Reading feature helps you keep track of books you are currently reading. You can update your progress, and mark books as finished once you complete them.</string>
    <string name="finished_reading_feature">Finished Reading Feature</string>
    <string name="finished_reading_feature_content">    The Finished Reading feature allows you to keep a record of all the books you have finished reading. Additionally, you can leave personal notes about each book, helping you remember your thoughts and reflections on the book.</string>
    <string name="our_team">Our Team</string>
    <string name="our_team_content">We are Bangkit Academy students, and this is our capstone project. Our team consists of passionate individuals dedicated to creating a user-friendly app that enhances your reading experience.</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_mission_content">Our mission is to foster a love for reading by providing readers with an intuitive platform to track their reading habits, discover new books, and connect with a community of fellow book lovers.</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_vision_content">Our vision is to create a world where reading is accessible to everyone. We believe that reading is a powerful tool for personal growth and development, and we want to make it easy for readers to discover new books and connect with other book lovers.</string>
    <string name="for_all_your_reading_needs">For all your reading needs</string>
    <string name="authorTitle">Author</string>
    <string name="publisherTitle">Publisher</string>
    <string name="isbnTitle">ISBN</string>
    <string name="yearTitle">Year</string>
    <string name="deleteButton">Delete</string>
    <string name="finished">Finished</string>
    <string name="Start_Reading">Start Reading</string>
    <string name="want_to_read_feature">Want To Read Feature</string>
    <string name="want_to_read_desc">The Want to Read feature allows you to store a list of books that you plan to read in the future. This feature helps you keep track of books you\'re interested in, making it easy to find and start reading them when you\'re ready. Simply select a book and add it to your Want to Read list for future reference.</string>
    <string name="Appearence">Appearance</string>
    <string name="Dark_mode_text">Dark Mode</string>
    <string name="Light_mode_text">Light Mode</string>
</resources>