<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sVAppGuide"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".settings.AppGuideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_guide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_guide"
            android:textSize="24sp"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_gravity="center" />

        <View
            android:id="@+id/line"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/lightRed"
            android:layout_marginBottom="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_of_the_app"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/lightRed"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/overview_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingBottom="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/search_feature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_feature"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/lightRed"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/search_feature_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_feature_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingBottom="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/currently_reading_feature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currently_reading_feature"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/lightRed"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/currently_reading_feature_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currently_reading_feature_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingBottom="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/want_to_read_feature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/want_to_read_feature"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/lightRed"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/want_to_read_feature_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/want_to_read_desc"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingBottom="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/finished_reading_feature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished_reading_feature"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/lightRed"
                    android:paddingBottom="4dp"/>

                <TextView
                    android:id="@+id/finished_reading_feature_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finished_reading_feature_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingBottom="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
