<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_item"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="118dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="11dp"
            android:layout_height="133dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/title_rv"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/authorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsitalic"
                android:text="@string/author_rv"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/progressSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100" />

                <TextView
                    android:id="@+id/progressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:textColor="@color/Green"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:scaleType="fitXY"
            android:src="@drawable/delete_logoo"
            android:background="@drawable/round_corners_item"
            android:contentDescription="@string/deleteButton" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moveButton"
        android:layout_marginStart="8dp"
        style="@style/CustomMaterialButton3"
        android:layout_width="325dp"
        android:layout_height="70dp"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_finished"
        app:iconGravity="textEnd"
        app:iconTint="@color/Green"
        android:text="@string/finished"
        android:textSize="16sp" />

</LinearLayout>